--- a/small_tests.ipynb
+++ b/small_tests.ipynb
@@ -119,8 +119,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "ac347c26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import openml\n",
+    "from sklearn import compose, impute, metrics, pipeline, preprocessing, tree, decomposition\n",
+    "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold\n",
+    "from sklearn.metrics import pairwise_distances, make_scorer, roc_auc_score, silhouette_score, pairwise_distances\n",
+    "from scipy.spatial.distance import pdist\n",
+    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.linear_model import LogisticRegression as lr\n",
+    "from sklearn.ensemble import RandomForestClassifier as rf\n",
+    "from sklearn.svm import SVC as svm\n",
+    "import sklearn.preprocessing as preprocessing\n",
+    "import sklearn.impute as impute\n",
+    "from openml import config, study, tasks, runs, extensions\n",
+    "from sklearn.naive_bayes import MultinomialNB as mnb\n",
+    "from sklearn.ensemble import ExtraTreesClassifier as etc\n",
+    "from sklearn.neighbors import KNeighborsClassifier as nn\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from scipy.stats import entropy\n",
+    "from uncertainty_quantifier import RandomForestEns as ens\n",
+    "from matplotlib.colors import LinearSegmentedColormap\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "dac967b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/valentin/mambaforge/envs/asl/lib/python3.8/site-packages/openml/datasets/functions.py:437: FutureWarning: Starting from Version 0.15 `download_data`, `download_qualities`, and `download_features_meta_data` will all be ``False`` instead of ``True`` by default to enable lazy loading. To disable this message until version 0.15 explicitly set `download_data`, `download_qualities`, and `download_features_meta_data` to a bool while calling `get_dataset`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "openmlid, seed  =3,0\n",
+    "try:\n",
+    "    ds = openml.datasets.get_dataset(openmlid)\n",
+    "    # print(\"dataset info loaded\")\n",
+    "    df = ds.get_data()[0]\n",
+    "    num_rows = len(df)\n",
+    "\n",
+    "    # print(\"Data in memory, now creating X and y\")\n",
+    "\n",
+    "    # prepare label column as numpy array\n",
+    "    X = np.array(df.drop(columns=[ds.default_target_attribute]).values)\n",
+    "    y = np.array(df[ds.default_target_attribute].values)\n",
+    "    if y.dtype != int:\n",
+    "        y_int = np.zeros(len(y)).astype(int)\n",
+    "        vals = np.unique(y)\n",
+    "        for i, val in enumerate(vals):\n",
+    "            mask = y == val\n",
+    "            y_int[mask] = i\n",
+    "        y = y_int\n",
+    "\n",
+    "except Exception as e:\n",
+    "    task = openml.tasks.get_task(openmlid)\n",
+    "    X, y = task.get_X_and_y()\n",
+    "\n",
+    "# random shuffle\n",
+    "arr = np.arange(y.shape[0])\n",
+    "\n",
+    "np.random.seed(seed)\n",
+    "np.random.shuffle(arr)\n",
+    "X = X[arr]\n",
+    "y = y[arr]\n",
+    "#print(\"X\", X)\n",
+    "#print(\"y\", y)\n",
+    "import sklearn.preprocessing as preprocessing\n",
+    "import sklearn.impute as impute\n",
+    "imputer = impute.SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "encoder = preprocessing.OrdinalEncoder()\n",
+    "X =encoder.fit_transform(X)\n",
+    "X = imputer.fit_transform(X)\n",
+    "\n",
+    "# split into train/test\n",
+    "train_X, X_te, train_labels, y_te = train_test_split(X, y, test_size=1 / 3, random_state=seed, stratify=None)\n",
+    "\n",
+    "\n",
+    "split = .5\n",
+    "\n",
+    "X_u, X_l, y_u, y_l = train_test_split(train_X, train_labels, test_size=split, random_state=seed, stratify=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "10d932c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 1., 1., 1., 0., 0., 0., 0., 0., 1., 0., 1., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 1., 1.],\n",
+       "       [1., 1., 0., 1., 0., 1., 0., 0., 0., 0., 1., 0., 1., 0., 1., 0.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 1., 0.],\n",
+       "       [1., 0., 1., 0., 0., 1., 1., 0., 0., 0., 1., 0., 0., 0., 1., 0.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "        1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 1., 0., 1., 0., 0., 0., 0., 1., 0., 1., 0., 1., 0.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 1., 0., 1., 1., 0., 0., 0., 1., 0.,\n",
+       "        1., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 1., 0., 0., 1., 0., 1., 0.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 1., 1.]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_u=X_u[:5]\n",
+    "y_u = y_u[:5]\n",
+    "X_l = X_l[:5]\n",
+    "y_l = y_l[:5]\n",
+    "X_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "id": "83a24821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to query from [1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skactiveml.pool import RandomSampling\n",
+    "\n",
+    "qs = RandomSampling()\n",
+    "\n",
+    "\n",
+    "to_query_from = np.setdiff1d(np.arange(len(X_u)), [0,4])\n",
+    "\n",
+    "Xu = X_u[to_query_from]\n",
+    "\n",
+    "\n",
+    "\n",
+    "nan_labels = np.full(len(Xu), np.nan, dtype=float)\n",
+    "print(\"to query from\",to_query_from)\n",
+    "\n",
+    "\n",
+    "queried_ids = qs.query(X=np.concatenate([X_l, Xu]), y=np.concatenate([y_l, nan_labels]), batch_size=2)\n",
+    "\n",
+    "ids = queried_ids - len(y_l)\n",
+    "original_ids = to_query_from[ids]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "4c749e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54d86913",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa51c08",
    "metadata": {},
    "outputs": [],
    "source": []
