updated docs, added notebooks

--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b112caca",
+   "id": "92abd1ff",
    "metadata": {},
    "source": [
-    "# Specifying an active learning problem, active learning pipeline and fit the pipeline on a dataset\n",
-    "### In this example we will specify and evaluate an active learning pipeline. You can set all parameters manually, such as the learning algorithm and query strategy to be used, the seeds, the size of the train/test split, number of iterations, number of queries per iteration, etc.\n"
+    "# Specify and fit an active learning pipeline"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8b6688",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "3aff3aca",
+   "id": "8125236c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8a7c63",
+   "id": "caea8e1d",
    "metadata": {},
    "source": [
     "## setup scenario and setting"
@@ -36,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9943d9ff",
+   "id": "405793c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3abc50d",
+   "id": "1e381aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b78b1896",
+   "id": "4b1d2c2d",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "908654a3",
+   "id": "6706ea0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258329a9",
+   "id": "72b89f71",
    "metadata": {},
    "source": [
     "## split data"
@@ -124,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d169237b",
+   "id": "16310f7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +140,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b2c46b",
+   "id": "619bf0e7",
    "metadata": {},
    "source": [
-    "## specify active learning pipeline and run procedure"
+    "## specify active learning pipeline and run procedure\n",
+    "#### we choose a random forest as learning algorithm and margin sampling as query strategy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ef89fdaf",
+   "id": "c859a4cd",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a644d16b",
+   "id": "f42c44f5",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8a9c66",
+   "id": "ff5c7cb1",
    "metadata": {},
    "outputs": [],
    "source": []
