--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a92c47cc",
+   "id": "1f702236",
    "metadata": {},
    "source": [
     "# Evaluating an active learning pipeline using the evaluator\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6adedd52",
+   "id": "960a9565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99042816",
+   "id": "81cc6622",
    "metadata": {},
    "source": [
     "### Establish the database connection, load default learners, query strategies and settings"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "35610c92",
+   "id": "36ca0315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ffad53",
+   "id": "7a28caa0",
    "metadata": {},
    "source": [
     "### Fit an ALP on the dataset with openmlid 31, the ALP is composed out of a SVM and Power Margin Sampling"
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "478900e6",
+   "execution_count": 4,
+   "id": "7f44af1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,15 +64,15 @@
     "    benchmark_connector=benchmark_connector,\n",
     "    setting_name=\"small\",\n",
     "    openml_id=31,\n",
-    "    sampling_strategy_name=\"power_margin\",\n",
+    "    query_strategy_name=\"power_margin\",\n",
     "    learner_name=\"svm_rbf\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "8ef89b60",
+   "execution_count": 5,
+   "id": "03d94342",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b746ff",
+   "id": "cb36c939",
    "metadata": {},
    "outputs": [],
    "source": []
