minor formatting of the notebooks

--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92abd1ff",
+   "id": "1b55f0ff",
    "metadata": {},
    "source": [
     "# Specify and fit an active learning pipeline"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc8b6688",
+   "cell_type": "markdown",
+   "id": "8150fdb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this example we will specify and evaluate an active learning pipeline. You can set all parameters manually, such as the learning algorithm and query strategy to be used, the seeds, the size of the train/test split, number of iterations, number of queries per iteration, etc."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8125236c",
+   "id": "354ef9db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caea8e1d",
+   "id": "199e67cd",
    "metadata": {},
    "source": [
-    "## setup scenario and setting"
+    "setup scenario and setting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "405793c8",
+   "id": "d948e0e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1e381aec",
+   "id": "165297b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4b1d2c2d",
+   "id": "81f8e418",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6706ea0e",
+   "id": "a0a5e27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +122,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72b89f71",
+   "id": "4a2ea7de",
    "metadata": {},
    "source": [
-    "## split data"
+    "split data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16310f7d",
+   "id": "e3240239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,17 +140,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "619bf0e7",
+   "id": "18e3fa6d",
    "metadata": {},
    "source": [
-    "## specify active learning pipeline and run procedure\n",
-    "#### we choose a random forest as learning algorithm and margin sampling as query strategy"
+    "specify active learning pipeline and run procedure\n",
+    "\n",
+    "we choose a **random forest** as learning algorithm and **margin sampling** as query strategy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c859a4cd",
+   "id": "1cbc8318",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f42c44f5",
+   "id": "ced4fed0",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5c7cb1",
+   "id": "a54b6ff5",
    "metadata": {},
    "outputs": [],
    "source": []
