--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f702236",
+   "id": "a20bfb48",
    "metadata": {},
    "source": [
-    "# Evaluating an active learning pipeline using the evaluator\n",
-    "### In this example we will specify and evaluate an active learning pipeline using the Evaluator, which can be done in only a few lines of code. The query strategy, learning algorithm and setting have to be specified by strings. (Check ALP/evaluation/experimenter/DefaultSetup.py to ensure you are using the same descriptions we are using.)"
+    "# Evaluating an active learning pipeline using the evaluator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb1048e3",
+   "metadata": {},
+   "source": [
+    "In this example we will specify and evaluate an active learning pipeline using the **Evaluator**, which can be done in only **a few lines of code**. The query strategy, learning algorithm and setting have to be specified by strings. (Check ALP/evaluation/experimenter/DefaultSetup.py to ensure you are using the same descriptions we are using.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "960a9565",
+   "id": "7313a603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +32,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81cc6622",
+   "id": "d99d147c",
    "metadata": {},
    "source": [
-    "### Establish the database connection, load default learners, query strategies and settings"
+    "Establish the database connection, load default learners, query strategies and settings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "36ca0315",
+   "id": "25c8f305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +54,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a28caa0",
+   "id": "0481ee08",
    "metadata": {},
    "source": [
-    "### Fit an ALP on the dataset with openmlid 31, the ALP is composed out of a SVM and Power Margin Sampling"
+    "Fit an ALP on the dataset with **openmlid 31**, the ALP is composed out of a **SVM and Power Margin Sampling**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f44af1e",
+   "id": "27ae568a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03d94342",
+   "id": "c5f48678",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb36c939",
+   "id": "b36326c7",
    "metadata": {},
    "outputs": [],
    "source": []
