--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b55f0ff",
+   "id": "fc808203",
    "metadata": {},
    "source": [
-    "# Specify and fit an active learning pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8150fdb6",
-   "metadata": {},
-   "source": [
+    "# Specify and fit an active learning pipeline\n",
     "In this example we will specify and evaluate an active learning pipeline. You can set all parameters manually, such as the learning algorithm and query strategy to be used, the seeds, the size of the train/test split, number of iterations, number of queries per iteration, etc."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "354ef9db",
+   "id": "78c0f5c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +27,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "199e67cd",
+   "id": "7e7ea388",
    "metadata": {},
    "source": [
-    "setup scenario and setting"
+    "### setup scenario and setting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d948e0e2",
+   "id": "17953099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "165297b5",
+   "id": "464780d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81f8e418",
+   "id": "b693d385",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a0a5e27c",
+   "id": "a8c3f075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +115,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2ea7de",
+   "id": "1128211e",
    "metadata": {},
    "source": [
-    "split data"
+    "### split data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e3240239",
+   "id": "0003eae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +133,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18e3fa6d",
+   "id": "78694505",
    "metadata": {},
    "source": [
-    "specify active learning pipeline and run procedure\n",
-    "\n",
-    "we choose a **random forest** as learning algorithm and **margin sampling** as query strategy"
+    "### specify active learning pipeline and run procedure"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1cbc8318",
+   "id": "fd29b1a5",
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +156,8 @@
     }
    ],
    "source": [
+    "# we choose a **random forest** as learning algorithm and **margin sampling** as query strategy\n",
+    "\n",
     "print(\"define query strategy\")\n",
     "query_strategy = MarginQueryStrategy(42)\n",
     "print(\"setup learner\")\n",
@@ -187,14 +180,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ced4fed0",
+   "id": "34a85c8e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.7166666666666667\n"
+      "final test acc 0.73\n"
      ]
     }
    ],
@@ -206,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54b6ff5",
+   "id": "94197d18",
    "metadata": {},
    "outputs": [],
    "source": []
