--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a20bfb48",
+   "id": "d7d4a567",
    "metadata": {},
    "source": [
-    "# Evaluating an active learning pipeline using the evaluator"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb1048e3",
-   "metadata": {},
-   "source": [
+    "# Evaluating an active learning pipeline using the evaluator\n",
     "In this example we will specify and evaluate an active learning pipeline using the **Evaluator**, which can be done in only **a few lines of code**. The query strategy, learning algorithm and setting have to be specified by strings. (Check ALP/evaluation/experimenter/DefaultSetup.py to ensure you are using the same descriptions we are using.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7313a603",
+   "id": "f7efe8ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +25,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d99d147c",
+   "id": "07e8a070",
    "metadata": {},
    "source": [
-    "Establish the database connection, load default learners, query strategies and settings"
+    "### Establish the database connection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "25c8f305",
+   "id": "5b95dfa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,19 +47,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0481ee08",
+   "id": "290042e6",
    "metadata": {},
    "source": [
-    "Fit an ALP on the dataset with **openmlid 31**, the ALP is composed out of a **SVM and Power Margin Sampling**"
+    "### Fit an ALP "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "27ae568a",
+   "execution_count": 3,
+   "id": "c6a39dde",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we choose dataset with **openmlid 31**, the ALP is composed out of a **SVM and Power Margin Sampling**\n",
     "evaluator = ALPEvaluator(\n",
     "    benchmark_connector=benchmark_connector,\n",
     "    setting_name=\"small\",\n",
@@ -78,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c5f48678",
+   "execution_count": 4,
+   "id": "9419ce82",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36326c7",
+   "id": "ee6b81eb",
    "metadata": {},
    "outputs": [],
    "source": []
