modified imports in notebook, updated .html

--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -16,11 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ALP.benchmark.ActiveLearningScenario import ActiveLearningScenario\n",
-    "from ALP.benchmark.ActiveLearningSetting import ActiveLearningSetting\n",
-    "from ALP.pipeline.ActiveLearningPipeline import ActiveLearningPipeline\n",
-    "from ALP.pipeline.Oracle import Oracle\n",
-    "from ALP.pipeline.QueryStrategy import MarginQueryStrategy\n",
+    "from alpbench.benchmark.ActiveLearningScenario import ActiveLearningScenario\n",
+    "from alpbench.benchmark.ActiveLearningSetting import ActiveLearningSetting\n",
+    "from alpbench.pipeline.ActiveLearningPipeline import ActiveLearningPipeline\n",
+    "from alpbench.pipeline.Oracle import Oracle\n",
+    "from alpbench.pipeline.QueryStrategy import MarginQueryStrategy\n",
     "from sklearn.ensemble import RandomForestClassifier as RF\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.73\n"
+      "final test acc 0.7166666666666667\n"
      ]
     }
    ],
@@ -207,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alp_saltbench",
+   "display_name": "venv",
    "language": "python",
-   "name": "alp_saltbench"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
