--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "from ALP.benchmark.BenchmarkConnector import DataFileBenchmarkConnector\n",
-    "from ALP.evaluation.experimenter.DefaultSetup import ensure_default_setup\n",
-    "from ALP.pipeline.ALPEvaluator import ALPEvaluator"
+    "from alpbench.benchmark.BenchmarkConnector import DataFileBenchmarkConnector\n",
+    "from alpbench.evaluation.experimenter.DefaultSetup import ensure_default_setup\n",
+    "from alpbench.pipeline.ALPEvaluator import ALPEvaluator"
    ]
   },
   {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6b81eb",
+   "id": "d514c9a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,9 +104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "alp_saltbench",
+   "display_name": "venv",
    "language": "python",
-   "name": "alp_saltbench"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
