updated jupyter notebooks

--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -30,7 +30,7 @@
    "id": "7e7ea388",
    "metadata": {},
    "source": [
-    "### setup scenario and setting"
+    "### Setup scenario and setting"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "id": "1128211e",
    "metadata": {},
    "source": [
-    "### split data"
+    "### Split data"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "id": "78694505",
    "metadata": {},
    "source": [
-    "### specify active learning pipeline and run procedure"
+    "### Specify active learning pipeline and run procedure"
    ]
   },
   {
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.7166666666666667\n"
+      "final test acc 0.6866666666666666\n"
      ]
     }
    ],
@@ -195,14 +195,6 @@
     "y_hat = ALP.predict(X=X_test)\n",
     "print(\"final test acc\", accuracy_score(y_test, y_hat))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94197d18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
