--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f7efe8ce",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5b95dfa5",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c6a39dde",
    "metadata": {},
    "outputs": [],
@@ -72,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9419ce82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "final test acc 0.7\n"
+     ]
+    }
+   ],
    "source": [
     "alp = evaluator.fit()\n",
     "\n",
@@ -84,6 +92,14 @@
     "y_hat = alp.predict(X=X_test)\n",
     "print(\"final test acc\", accuracy_score(y_test, y_hat))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42862f69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
