updated notebooks, added one that shows how to plot budget curves

--- a/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline_evaluator.ipynb
@@ -60,19 +60,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we choose dataset with **openmlid 31**, the ALP is composed out of a **SVM and Power Margin Sampling**\n",
+    "# we choose dataset with **openmlid 31**, the ALP is composed out of a **rf and BALD**\n",
     "evaluator = ALPEvaluator(\n",
     "    benchmark_connector=benchmark_connector,\n",
     "    setting_name=\"small\",\n",
     "    openml_id=31,\n",
-    "    query_strategy_name=\"power_margin\",\n",
-    "    learner_name=\"svm_rbf\",\n",
+    "    query_strategy_name=\"bald\",\n",
+    "    learner_name=\"rf_entropy\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9419ce82",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.7\n"
+      "final test acc 0.7454545454545455\n"
      ]
     }
    ],
@@ -104,9 +104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "alpbench kernel release 0.1.1",
    "language": "python",
-   "name": "venv"
+   "name": "test_venv3"
   },
   "language_info": {
    "codemirror_mode": {
