--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "17953099",
    "metadata": {},
    "outputs": [],
@@ -53,12 +53,12 @@
     "SETTING_TEST_SIZE = 0.3\n",
     "NUMBER_OF_IT = 10\n",
     "NUMBER_OF_QUERIES = 5\n",
-    "FACTOR = None"
+    "FACTOR = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "464780d1",
    "metadata": {},
    "outputs": [],
@@ -77,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "b693d385",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ActiveLearningSetting> {'setting_id': 1337, 'setting_name': 'TestSetting', 'setting_labeled_train_size': 10.0, 'setting_train_type': 'absolute', 'setting_test_size': 0.3, 'number_of_iterations': 10, 'number_of_queries': 5, 'factor': None}"
+       "<ActiveLearningSetting> {'setting_id': 1337, 'setting_name': 'TestSetting', 'setting_labeled_train_size': 10.0, 'setting_train_type': 'absolute', 'setting_test_size': 0.3, 'number_of_iterations': 10, 'number_of_queries': 5, 'factor': -1}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a8c3f075",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "0003eae5",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "fd29b1a5",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "34a85c8e",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.6866666666666666\n"
+      "final test acc 0.68\n"
      ]
     }
    ],
@@ -195,13 +195,21 @@
     "y_hat = ALP.predict(X=X_test)\n",
     "print(\"final test acc\", accuracy_score(y_test, y_hat))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37bc00ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv_012",
    "language": "python",
-   "name": "venv"
+   "name": "venv_012"
   },
   "language_info": {
    "codemirror_mode": {
