Modified unit tests, s.t. logging is checked as well.

--- a/docs/source/notebooks/test_active_learning_pipeline.ipynb
+++ b/docs/source/notebooks/test_active_learning_pipeline.ipynb
@@ -11,10 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "78c0f5c0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:48:53.206091Z",
+     "start_time": "2024-07-16T14:48:48.686695Z"
+    }
+   },
    "source": [
     "from alpbench.benchmark.ActiveLearningScenario import ActiveLearningScenario\n",
     "from alpbench.benchmark.ActiveLearningSetting import ActiveLearningSetting\n",
@@ -23,7 +26,9 @@
     "from alpbench.pipeline.QueryStrategy import MarginQueryStrategy\n",
     "from sklearn.ensemble import RandomForestClassifier as RF\n",
     "from sklearn.metrics import accuracy_score"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -35,10 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "17953099",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:48:55.818788Z",
+     "start_time": "2024-07-16T14:48:55.808100Z"
+    }
+   },
    "source": [
     "SCENARIO_ID = 1\n",
     "OPENML_ID = 31\n",
@@ -54,14 +62,19 @@
     "NUMBER_OF_IT = 10\n",
     "NUMBER_OF_QUERIES = 5\n",
     "FACTOR = -1"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "464780d1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:48:56.830049Z",
+     "start_time": "2024-07-16T14:48:56.822763Z"
+    }
+   },
    "source": [
     "alsetting = ActiveLearningSetting(\n",
     "    setting_id=SETTING_ID,\n",
@@ -73,13 +86,22 @@
     "    number_of_queries=NUMBER_OF_QUERIES,\n",
     "    factor=FACTOR,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "b693d385",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:48:58.967395Z",
+     "start_time": "2024-07-16T14:48:58.948114Z"
+    }
+   },
+   "source": [
+    "alsetting"
+   ],
    "outputs": [
     {
      "data": {
@@ -87,21 +109,22 @@
        "<ActiveLearningSetting> {'setting_id': 1337, 'setting_name': 'TestSetting', 'setting_labeled_train_size': 10.0, 'setting_train_type': 'absolute', 'setting_test_size': 0.3, 'number_of_iterations': 10, 'number_of_queries': 5, 'factor': -1}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "alsetting"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "a8c3f075",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:49:15.039284Z",
+     "start_time": "2024-07-16T14:49:14.962539Z"
+    }
+   },
    "source": [
     "alscenario = ActiveLearningScenario(\n",
     "    scenario_id=SCENARIO_ID,\n",
@@ -111,7 +134,9 @@
     "    seed=SEED,\n",
     "    setting=alsetting,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -123,13 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
    "id": "0003eae5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:49:17.097774Z",
+     "start_time": "2024-07-16T14:49:17.085714Z"
+    }
+   },
    "source": [
     "X_l, y_l, X_u, y_u, X_test, y_test = alscenario.get_data_split()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -141,20 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "fd29b1a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "define query strategy\n",
-      "setup learner\n",
-      "fit active learning pipeline\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:49:22.930529Z",
+     "start_time": "2024-07-16T14:49:18.151516Z"
     }
-   ],
+   },
    "source": [
     "# we choose a **random forest** as learning algorithm and **margin sampling** as query strategy\n",
     "\n",
@@ -170,31 +193,49 @@
     "    init_budget=SETTING_TRAIN_SIZE,\n",
     "    num_iterations=NUMBER_OF_IT,\n",
     "    num_queries_per_iteration=NUMBER_OF_QUERIES,\n",
+    "    initially_labeled_indices=alscenario.labeled_indices,\n",
     ")\n",
     "\n",
     "oracle = Oracle(X_u, y_u)\n",
     "print(\"fit active learning pipeline\")\n",
     "ALP.active_fit(X_l, y_l, X_u, oracle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "34a85c8e",
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "final test acc 0.68\n"
+      "define query strategy\n",
+      "setup learner\n",
+      "fit active learning pipeline\n"
      ]
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "id": "34a85c8e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-16T14:49:22.983309Z",
+     "start_time": "2024-07-16T14:49:22.936474Z"
+    }
+   },
    "source": [
     "y_hat = ALP.predict(X=X_test)\n",
     "print(\"final test acc\", accuracy_score(y_test, y_hat))"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "final test acc 0.6966666666666667\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
